Improve project layout

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,22 +7,21 @@ project(
     LANGUAGES CXX
 )
 
-include("${CMAKE_SOURCE_DIR}/../cmake/find_libs_dir.cmake")
-include("${CMAKE_SOURCE_DIR}/../cmake/find_arch.cmake")
-
-file(GLOB SOURCE_FILES
-    "*.cpp"
+set(SOURCE_FILES
+    "lib/address.cpp"
+    "lib/courier.cpp"
+    "lib/raw_courier.cpp"
 )
 
 add_library(${PROJECT_NAME} STATIC ${SOURCE_FILES})
 
 set_target_properties(
     ${PROJECT_NAME} PROPERTIES
-    CXX_STANDARD 17
+    CXX_STANDARD 20
     CXX_STANDARD_REQUIRED ON
 )
 
 target_include_directories(
     ${PROJECT_NAME}
-    PRIVATE "${PROJECT_SOURCE_DIR}/.."
+    PUBLIC include
 )
